# cmakeBuilder

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmakebuilder.cpp  cmakebuilder.h  cmakebuilder.ui  config.cpp  config.h  main.cpp
